tests/semantic/valid/control_flow.src
fn check_conditions(int x) -> int {
    if (x > 0) {
        return 1;
    } else {
        if (x < 0) {
            return -1;
        }
    }
    return 0;
}

fn loop_example(int n) -> int {
    int sum = 0;
    
    for (int i = 0; i < n; i = i + 1) {
        sum = sum + i;
    }
    
    int i = 0;
    while (i < n) {
        sum = sum + i;
        i = i + 1;
    }
    
    return sum;
}

fn main() -> int {
    int sign = check_conditions(5);
    int total = loop_example(10);
    return total;
}
