tests/semantic/invalid/argument_type_mismatch.src
fn add(int a, int b) -> int {
    return a + b;
}

fn main() -> int {
    int result = add(3.14, 5);
    return 0;
}
